# LOFAR

./: CMakeLists.txt  CTestCustom.cmake.in  INSTALL  Makefile  README  Versions  jenkins_make  lofar_config.h.cmake  lofarconf.in  lofarinit.csh.in  pom.xml  releases.doc  test.txt  variants  variants.lofar3
Appl/: CMakeLists.txt  package.dox
Appl/ApplCommon/: Makefile.am
Appl/ApplCommon/src/: Observation.cc
Appl/CEP/CS1/: lofarconf.in
CEP/MS/: CMakeLists.txt  configure.in
CEP/MS/src/: CMakeLists.txt  DH_MSMake.cc  MSCreate.cc  Makefile.am  VdsMaker.cc  combinevds.cc  expandcalps  expandimageps  expandtargetps  makems.cc  makems.cfg  makemsdesc.cc  makemsdistr  makevds.cc  msinfo.cc  msoverview.cc  msselect.cc  mstools.py
CEP/MS/test/: CMakeLists.txt  Makefile.am  tVdsMaker.cc  tVdsMaker.run  tcombinevds.sh  tmakems.run  tmakems.sh
CEP/ParmDB/: CMakeLists.txt  Makefile.am  configure.in
CEP/ParmDB/src/: CMakeLists.txt  Grid.cc  Makefile.am  ParmDBCasa.cc  ParmDBLog.cc  ParmDBPostgresTransactors.cc  ParmFacade.cc  ParmFacadeDistr.cc  ParmFacadeLocal.cc  PatchInfo.cc  SourceDB.cc  SourceDBBlob.cc  SourceDBCasa.cc  makesourcedb.cc  mergesourcedb.cc  parmdb_main.cc  parmdbclient.cc  parmdbm.cc  parmdbremote.cc  parmexportcal.cc  setupparmdb  setupparmdb-part  setupsourcedb  setupsourcedb-part  startparmdbdistr
CEP/ParmDB/test/: CMakeLists.txt  Makefile.am  tAxisMapping.sh  tBox.cc  tGrid.cc  tParm.cc  tParm.sh  tParmDBCasa.cc  tParmDBLog.cc  tParmFacade.cc  tParmFacade.run  tParmFacade.sh  tParmFacade.stdout  tParmFacadeDistr.run  tParmFacadeDistr.sh  tParmValue.sh  tSourceDBBlob.cc  tSourceDBBlob.stdout  tSourceDBCasa.cc  tTimeAxis.cc  tmakesourcedb.in  tmakesourcedb.in_2  tmakesourcedb.run  tmakesourcedb.sh  tmergesourcedb.in_1  tmergesourcedb.sh  tmergesourcedb.stdout  tparmdb.in  tparmdb.run  tsetupparmdb.in_ms0.vds  tsetupparmdb.in_ms2.vds  tsetupparmdb.in_vd  tsetupparmdb.run  tsetupparmdb.sh  tsetupparmdb.stdout  tsetupsourcedb.in_ms0.vds  tsetupsourcedb.run  tsetupsourcedb.stdout
CEP/Pipeline/: CMakeLists.txt
CEP/Pipeline/framework/: CMakeLists.txt
CEP/Pipeline/test/: CMakeLists.txt  pipeline_test.run
CEP/pyparmdb/: CMakeLists.txt  configure.in
CEP/pyparmdb/src/: CMakeLists.txt  __init__.py  gsm.py  gsmutils.py
Firmware/tools/: configure.in
Firmware/tools/src/: Makefile.am  flash_tbb.sh
LCS/ApplCommon/: CMakeLists.txt  configure.in  package.dox
LCS/ApplCommon/src/: AntField.cc  CMakeLists.txt  CableAttenuation.cc  Makefile.am  Observation.cc  RCUCables.cc  StationConfig.cc  StationInfo.cc  TBB_StaticMapping.cc
LCS/ApplCommon/test/: CMakeLists.txt  Makefile.am  tAntField.in_fr2  tAntField.stdout  tAntennaSet.in_1  tAntennaUse.cc  tCableAttenuation.stdout  tObservation.cc  tObservation.in_conflict1  tObservation.in_conflict2  tObservation.in_conflict4  tObservation.in_parset1  tObservation.log_prop  tObservation.stdout  tRCUCables.cc  tRCUCables.stdout  tStationConfig.in_oldFormat  tStationConfig.sh  tStationConfig.stdout  tStationInfo.cc
LCS/Blob/: CMakeLists.txt  configure.in
LCS/Blob/src/: BlobArray.cc  BlobField2.cc  BlobFieldSet.cc  BlobHeader.cc  BlobIBufStream.cc  BlobIStream.cc  BlobOBufChar.cc  BlobOBufNull.cc  BlobOBufStream.cc  BlobOBufString.cc  BlobOStream.cc  BlobString.cc  CMakeLists.txt  KeyParse.yy  KeyParser.cc  KeyTokenize.ll  KeyValue.cc
LCS/Blob/test/: CMakeLists.txt  Makefile.am  tBlobAipsIO.cc  tBlobArray.cc  tBlobArray.sh  tBlobArrayHeader.cc  tBlobCasa.cc  tBlobField.cc  tBlobHeader.cc  tBlobSTL.cc  tBlobSTL.sh  tBlobSTL_test.sh  tBlobStream.cc  tBlobStream.in_be  tBlobString.cc  tKeyValueMap.cc  tKeyValueMap.stdout
LCS/PyCommon/: CMakeLists.txt  __init__.py  datetimeutils.py  dbcredentials.py  postgres.py  util.py
LCS/PyCommon/test/: CMakeLists.txt  t_methodtrigger.py
LCS/Stream/: CMakeLists.txt  Makefile.am  configure.in  lofar_config.h.cmake
LCS/Stream/src/: CMakeLists.txt  FileStream.cc  (+8 more)
LCS/pytools/: CMakeLists.txt
LTA/LTAIngest/: CMakeLists.txt  example.job  ingest_config.py.in  ingest_config_test.py  ingest_config_test.py.in  ingest_install_logrotate_crontab.sh.in  ingestpipeline.py  ingestpipeline_test.py  job_group.py.in  job_parser.py  ltacp.py  ltaingest_build.sh  mom_http.py  slave.py  startup.csh  startup_target.csh  startup_target_test.csh  startup_test.csh  unspecifiedSIP.py
MAC/APL/: CMakeLists.txt  Makefile.am  configure.in  lofarconf.in
MAC/Deployment/: CMakeLists.txt  Makefile.am  configure.in
RTCP/: CMakeLists.txt  lofarconf.in
RTCP/BGLProc/: BGLProc.spec.in
RTCP/CNProc/: CMakeLists.txt  bootstrap  configure.in  lofar_config.h.cmake
RTCP/FCNP/: CMakeLists.txt  configure.in  lofar_config.h.cmake
RTCP/GPUProc/: CMakeLists.txt
RTCP/IONProc/: CMakeLists.txt  Makefile.am  configure.in  lofar_config.h.cmake
RTCP/InputProc/: CMakeLists.txt  foo.cc
RTCP/Interface/: CMakeLists.txt  Makefile.am  configure.in  lofar_config.h.cmake
RTCP/LofarStMan/: configure.in
RTCP/RTCPTools/: CMakeLists.txt  configure.in
RTCP/Storage/: CMakeLists.txt  configure.in
SAS/Beaminfo/: CMakeLists.txt
SAS/OTDB_Services/: CMakeLists.txt  OTDBBusListener.py  TreeService.ini  TreeService.py  TreeStatusEvents.ini  TreeStatusEvents.py  config.py  getParset.py  otdbrpc.py  setStatus.py
StationSim/src/: ArrayConfig.h  DH_RCU.cc  DH_RCU.h  DH_RFITrack.cc  DH_RFITrack.h  DH_Sample.h  DH_SampleC.cc  DH_SampleR.cc  DH_SubBandSel.cc  DH_TargetTrack.cc  DH_Weight.cc  DH_Weight.h  DataGenConfig.cc  DataGenConfig.h  FFTW.cc  FFTW.h  FilterBank.cc  FilterBank.h  GnuPlotInterface.cc  MDL.cc  MDL.h  Makefile.am  Modulate.cc  Modulate.h  PASTd.cc  PhaseShift.cc  QMinterface.h  SelSubbands.cc  SelSubbands.h  Signal.cc  Signal.h  Simulate.cc  Source.cc  Source.h  StationSim.cc  Trajectory.h  WH_AWE.cc  WH_AWE.h  WH_AddSignals.cc  WH_AddSignals.h  (+36 more)
StationTest/tc/: Makefile.am  hba_client.py  hba_server.py  prsg.py  serdes.py
SubSystems/Online_Cobalt/: CMakeLists.txt
SubSystems/RAServices/: CMakeLists.txt  RAServices.ini
branches/LOFAR-Bug1310-task-branch/: CMakeLists.txt  lofar_config.h.cmake
(+62932 files in other folders)
