dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT

dnl Not really necessary (we have no C sources), but autoconf requires it
AC_CONFIG_HEADERS(config.h)

dnl Needed by automake (e.g. for make dist)
AM_INIT_AUTOMAKE(Firmware-Tools, 1.0, no-define)

dnl This is only needed because bootstrap issues a libtoolize command
AC_PROG_LIBTOOL

dnl
dnl Output Makefiles
dnl
AC_OUTPUT(
src/Makefile
Makefile)
